--- a/src/partials/best-sellers.html
+++ b/src/partials/best-sellers.html
@@ -1,7 +1,10 @@
 <section class="section">
 <div class="container">
+    
     <aside class="side-categories">
+    <div class="categories"></div>
     <include src="./partials/support.html"></include>
+    
     <div class="test-sup"></div>
     </aside>
     <section class="hero-section">
